# JUCE_CMake_Tracy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
